separated functionality over different files

--- a/MSXDK/tools/bitbuster/Makefile
+++ b/MSXDK/tools/bitbuster/Makefile
@@ -6,7 +6,7 @@ else
 endif
 
 TARGETS	 = bitbuster$(EXTENSION)
-OBJECTS  = main.o 
+OBJECTS  = main.o compress.o encode.o
 
 INCDIR   = ../include
 BINDIR   = ../../bin
