moved code from loadsave_file into filesnstreams and added the littleendian stream write and read

--- a/MSXDK/tools/common/Makefile
+++ b/MSXDK/tools/common/Makefile
@@ -1,7 +1,7 @@
 
 TARGETS	 = libcommon.a
-OBJECTS  = loadsave_file.o OptionParser.o
-HEADERS	 = loadsave_file.h OptionParser.h
+OBJECTS  = filesnstreams.o OptionParser.o
+HEADERS	 = filesnstreams.h OptionParser.h
 
 INCDIR   = ../include
 LIBDIR   = ../lib
